--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,3 +50,31 @@
   font-size: 1rem;
   color: #007BFF;
 }
+
+.dropdown {
+  position: fixed;
+  top: 3%;
+  left: 50%;
+  width: auto; /* adjust the width to fit the content */
+  white-space: nowrap; /* prevent the text from wrapping */
+  border-radius: 10px;
+  background-color: #007bff;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  transform: translateX(-50%); /* center the div horizontally */
+  opacity: 0; /* start with the div invisible */
+  animation: fadeIn 0.5s, fadeOut 1.3s 0.2s forwards; /* fade in, then fade out */
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1; /* end with the div fully visible */
+  }
+}
+
+@keyframes fadeOut {
+  to {
+    opacity: 0; /* end with the div invisible */
+  }
+}
